dsp/2022.1/_sources/user_guide/L2/api-reference.rst.txt
..
   Copyright 2022 Xilinx, Inc.

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.

.. _API_REFERENCE:

**********************
API Reference Overview
**********************

For all library elements, the recommended manner to use an instance of each library unit is to include an instance of the library element as a sub-graph of your graph.
The graph declarations may be found in L2/include/aie/.
This section describes the interface to each library element, i.e., configuration parameters, constructor arguments, and ports.


- `fir_sr_asym_graph <../../rst/class_xf_dsp_aie_fir_sr_asym_fir_sr_asym_graph.html>`_
- `fir_sr_sym_graph <../../rst/class_xf_dsp_aie_fir_sr_sym_fir_sr_sym_graph.html>`_
- `fir_interpolate_asym_graph <../../rst/class_xf_dsp_aie_fir_interpolate_asym_fir_interpolate_asym_graph.html>`_
- `fir_decimate_hb_graph <../../rst/class_xf_dsp_aie_fir_decimate_hb_fir_decimate_hb_graph.html>`_
- `fir_interpolate_hb_graph <../../rst/class_xf_dsp_aie_fir_interpolate_hb_fir_interpolate_hb_graph.html>`_
- `fir_decimate_asym_graph <../../rst/class_xf_dsp_aie_fir_decimate_asym_fir_decimate_asym_graph.html>`_
- `fir_interpolate_fract_asym_graph <../../rst/class_xf_dsp_aie_fir_interpolate_fract_asym_fir_interpolate_fract_asym_graph.html>`_ Note: superseded by fir_resampler
- `fir_decimate_sym_graph <../../rst/class_xf_dsp_aie_fir_decimate_sym_fir_decimate_sym_graph.html>`_
- `fir_resampler_graph <../../rst/class_xf_dsp_aie_fir_resampler_fir_resampler_graph.html>`_
- `matrix_mult_graph <../../rst/class_xf_dsp_aie_blas_matrix_mult_matrix_mult_graph.html>`_
- `FFT Graphs <../../rst/group_fft_graphs.html>`_
- `widget_api_cast_graph <../../rst/class_xf_dsp_aie_widget_api_cast_widget_api_cast_graph.html>`_
- `widget_real2complex_graph <../../rst/class_xf_dsp_aie_widget_real2complex_widget_real2complex_graph.html>`_
- `dds_mixer_graph <../../rst/class_xf_dsp_aie_mixer_dds_mixer_dds_mixer_graph.html>`_


.. |image1| image:: ./media/image1.png
.. |image2| image:: ./media/image2.png
.. |image3| image:: ./media/image4.png
.. |image4| image:: ./media/image2.png
.. |image5| image:: ./media/image2.png
.. |image6| image:: ./media/image2.png
.. |image7| image:: ./media/image5.png
.. |image8| image:: ./media/image6.png
.. |image9| image:: ./media/image7.png
.. |image10| image:: ./media/image2.png
.. |image11| image:: ./media/image2.png
.. |image12| image:: ./media/image2.png
.. |image13| image:: ./media/image2.png
.. |trade|  unicode:: U+02122 .. TRADEMARK SIGN
   :ltrim:
.. |reg|    unicode:: U+000AE .. REGISTERED TRADEMARK SIGN
   :ltrim:


